--- a/user/smartagri/src/assest/css/typo.css
+++ b/user/smartagri/src/assest/css/typo.css
@@ -24,6 +24,12 @@
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 600;
 }
+.product-weight-on-card {
+    color: #544bf9;
+    font-size: 14px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 600;
+}
 .category-name{
     color: #000000;
     font-size: 13px;
