--- a/user/smartagri/src/assest/css/navMenuMobile.css
+++ b/user/smartagri/src/assest/css/navMenuMobile.css
@@ -41,3 +41,11 @@
 .ContentOverlayClose {
     display: none;
 }
+
+.bar-btn{
+    padding: 5px 15px 5px 15px;
+    color: #FAFDFB;
+    border-radius: 20px !important;
+    border:0.5px solid #051b35;
+    background: #051b35 !important;
+}
