--- a/user/smartagri/src/assest/css/button.css
+++ b/user/smartagri/src/assest/css/button.css
@@ -1,6 +1,6 @@
 .btn {
     border: none !important;
-    border-radius: 0px !important;
+    border-radius: 10px !important;
 }
 .btn:focus {
     box-shadow: none;
@@ -20,6 +20,15 @@
     font-family: 'Roboto Condensed', sans-serif;
     color: white !important;
     background: #051b35 !important;
+}
+
+.site-btn-userselect{
+    font-weight: 300;
+    padding: 5px;
+    width:100%;
+    font-family: 'Roboto Condensed', sans-serif;
+    color: white !important;
+    background: #065c35 !important;
 }
 
 .site-btn:active{
