--- a/user/smartagri/src/assest/css/custom.css
+++ b/user/smartagri/src/assest/css/custom.css
@@ -14,6 +14,8 @@
 @import "common.css";
 @import "productDetails.css";
 @import "cartList.css";
+@import "farmerDashboard";
+@import "insAppointment";
 
 /* body{
     background-color: rgb(247, 247, 247);
