Graph added to instructor Home  Page

--- a/user/smartagri/src/assest/css/InstructorDashboard.css
+++ b/user/smartagri/src/assest/css/InstructorDashboard.css
@@ -16,6 +16,10 @@
     grid-template-columns: 11rem auto 20rem;
 }
 
+.contain{
+    margin-top: 90px;
+}
+
 @media screen and (max-width:1200px){
 
     .instructGlass{
