--- a/user/smartagri/src/assest/css/farmerDashboard.css
+++ b/user/smartagri/src/assest/css/farmerDashboard.css
@@ -53,3 +53,10 @@
 .cropformdivision{
     margin-top: 70px;
 }
+
+.crophistorycard{
+    margin-bottom: 10px;
+    background-color: rgb(218, 240, 185);
+    border-radius: 30px;
+    max-width: 90%;
+}
