farmer page rebuild

--- a/user/smartagri/src/assest/css/custom.css
+++ b/user/smartagri/src/assest/css/custom.css
@@ -19,6 +19,7 @@
 @import "appointment";
 @import "JournelViews";
 @import "SearchItem";
+@import "placeHolder";
 
 /* body{
     background-color: rgb(247, 247, 247);
