--- a/user/smartagri/src/assest/css/custom.css
+++ b/user/smartagri/src/assest/css/custom.css
@@ -20,6 +20,8 @@
 @import "JournelViews";
 @import "SearchItem";
 @import "placeHolder";
+@import "Orders";
+@import "ProductSearchItem";
 
 /* body{
     background-color: rgb(247, 247, 247);
