--- a/user/smartagri/src/assest/css/custom.css
+++ b/user/smartagri/src/assest/css/custom.css
@@ -22,6 +22,7 @@
 @import "placeHolder";
 @import "Orders";
 @import "ProductSearchItem";
+@import "adminview";
 
 /* body{
     background-color: rgb(247, 247, 247);
