--- a/user/smartagri/src/assest/css/custom.css
+++ b/user/smartagri/src/assest/css/custom.css
@@ -23,6 +23,7 @@
 @import "Orders";
 @import "ProductSearchItem";
 @import "adminview";
+@import "chartCard";
 
 /* body{
     background-color: rgb(247, 247, 247);
