--- a/user/smartagri/src/assest/css/custom.css
+++ b/user/smartagri/src/assest/css/custom.css
@@ -24,6 +24,8 @@
 @import "ProductSearchItem";
 @import "adminview";
 @import "chartCard";
+@import "CreditCardPayment";
+@import "JournalInDetail";
 
 /* body{
     background-color: rgb(247, 247, 247);
