--- a/user/smartagri/src/assest/css/ProductSearchItem.css
+++ b/user/smartagri/src/assest/css/ProductSearchItem.css
@@ -4,16 +4,31 @@
     border-radius: 5px;
     display: flex;
     justify-content: space-between;
-    gap: 20px;
+    gap: 10px;
     margin-bottom: 10px;
     height: 230px;
-    width: 700px;
+    width: 600px;
     margin-top: 0.5rem;
     background-color: rgb(253, 255, 254);
 }
 
+.searchItemsss {
+    border: 1px solid rgb(78, 74, 74);
+    padding: 10px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    margin-bottom: 10px;
+    height: 300px;
+    width: 500px;
+    margin-top: 0.5rem;
+    background-color: rgb(253, 255, 254);
+}
 
-
+.ptitle{
+    text-align-last: left;
+}
 .siTitles{
     font-size: 18px;
     align-content: left;
